# 2024-OSAlgo

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
ConfigFile/easyLogging++/: debug.conf  release.conf
Ideas/: Class Design.md  Class Document.md  Project Overview.md  Structure Design.md  Structure Graph.json  third party.md
Ideas/Project Develop Document/: Cplusplus.md  Markdown.md  Project Structure.md
Task/: OS课程设计.docx  ~$OS课程设计.docx
TestGenerator/: CMakeLists.txt  main.cpp
ToolKit/ConfigFile/easyLogging++/: release.conf
ToolKit/RunAndGrade/: Clickme.ps1  Clickme.sh  Grade.ps1  Grade.sh  RunTest.ps1  RunTest.sh
ToolKit/RunAndGrade/ans/: CASE0.ans  CASE1.ans  CASE2.ans  CASE3.ans  CASE4.ans  CASE5.ans  CASE6.ans  CASE7.ans
ToolKit/测试文件夹/: RunTest.ps1
ToolKit/测试文件夹/ans/: CASE1.ans  CASE10.ans  CASE2.ans  CASE3.ans  CASE4.ans  CASE5.ans  CASE6.ans  CASE7.ans  CASE8.ans  CASE9.ans
ToolKit/测试文件夹/in/: CASE1.in  CASE10.in  CASE2.in  CASE3.in  CASE4.in  CASE5.in  CASE6.in  CASE7.in  CASE8.in  CASE9.in
source/: CMakeLists.txt  main.cpp
source/Test/: Test.md  test.cpp
source/TestGenerator/: config.h  main.cpp
source/documents/: Class AlgoBase.md  FstPageTable.md  MemInterface.md  MyAlgo.md  PRALgoIMPROVEDCLOCK.md  PRAlgo.md  PRAlgoBase.md  PRAlgoCLOCK.md  PRAlgoFIFO.md  PRAlgoLRU.md  Page.md  PageAlgo.md  PageContainer.md  PageSystemGlobals.md  StatusTracker.md  VirtualMemorySystem.md  main.md
source/private/: FstPageTable.cpp  MemInterface.cpp  PRAlgo.cpp  PRAlgoBase.cpp  PRAlgoCLOCK.cpp  PRAlgoFIFO.cpp  PRAlgoIMPROVEDCLOCK.cpp  PRAlgoLRU.cpp  Page.cpp  PageContainer.cpp  PageEntry.cpp  PageSystemGlobals.cpp  StatusTracker.cpp  VirtualMemorySystem.cpp  VirtualSystemMemory.cpp
source/public/: CommonHeaders.h  FstPageTable.h  MemInterface.h  MemoryAlloc.h  MyAlgo.hpp  PCB.h  PRAlgo.h  PRAlgoBase.h  PRAlgoCLOCK.h  PRAlgoFIFO.h  PRAlgoIMPROVEDCLOCK.h  PRAlgoLRU.h  Page.h  PageContainer.h  PageEntry.h  PageSystemGlobals.h  StatusTracker.h  VirtualMemorySystem.h  VirtualSystemMemory.h
